v2 版本：移除批量合成 + 新增重复次数功能 + 多项关键Bug修复
核心变更：
- 移除 BatchCraftTask/BatchCraftManager/BatchQuantityScreen，改为 CraftingPlanScreen 内嵌次数输入
- GenericCraftPacket 支持 repeatCount，异步链完成回调自递归实现多次合成
- 修复 AsyncCraftManager.submit() 覆盖 onDone 回调导致 repeat 只执行一次
- 修复 LRU cache key 缺失 repeatCount 导致计划数据回弹
- 修复 ItemStack.setCount() 超 signed byte 127 溢出
- 修复 CraftingPlanScreen 物料区域 double-scaling
- 修复 PlanResponse 缺失 repeatCount 导致刷新重置次数
- 修复 Ingredient 分组 key 碰撞（改用 JSON key）
- 修复 Tooltip 颜色硬编码 GRAY
- 结果留在 RS 不再提取给玩家